--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.dev.DOCKERPW }}" | docker login -u iljunkim --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u iljunkim --password-stdin
         docker image build -t iljunkim/gitops:hellov1.2 .
         docker push iljunkim/gitops:hellov1.2
